# mx-permissionless-experiment

./: Cargo.toml
adder/: Cargo.toml
adder/interactor/: Cargo.toml
adder/meta/: Cargo.toml
adder/tests/: adder_blackbox_test.rs  adder_whitebox_test.rs
registry-sc/: Cargo.toml
registry-sc/meta/: Cargo.toml
registry-sc/meta/src/: main.rs
registry-sc/src/: registry_sc.rs
social-registry-contract/: Cargo.toml
social-registry-contract/meta/: Cargo.toml
social-registry-contract/meta/src/: main.rs
social-registry-contract/src/: social_registry_contract.rs
