[package]
name = "adder"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/adder.rs"

[dependencies.multiversx-sc]
version = "0.54.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.4"

[workspace]
members = [
    ".",
    "meta",
    "interactor",
]
